--- a/Sw/Properties/Resources.resx
+++ b/Sw/Properties/Resources.resx
@@ -130,4 +130,16 @@
   <data name="round_stock_dlg_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\round_stock_dlg_icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Eula" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Eula.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-1251</value>
+  </data>
+  <data name="Licenses" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Licenses.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-1251</value>
+  </data>
+  <data name="round_step_predefined" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\round-step-predefined.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="round_step_custom" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\round-step-custom.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
