--- a/Sw/Properties/Resources.resx
+++ b/Sw/Properties/Resources.resx
@@ -142,4 +142,13 @@
   <data name="round_step_custom" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\round-step-custom.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="warning_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\warning-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="UpdateUrl" xml:space="preserve">
+    <value>https://www.codestack.net/labs/solidworks/stock-fit-geometry/version-info.json</value>
+  </data>
+  <data name="about_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\about-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
