--- a/Sw/Properties/Resources.resx
+++ b/Sw/Properties/Resources.resx
@@ -117,4 +117,38 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AppTitle" xml:space="preserve">
+    <value>Stock Master</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="round_stock_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\round-stock-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="WorkDir" xml:space="preserve">
+    <value>CodeStack\StockMaster</value>
+  </data>
+  <data name="round_stock_dlg_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\round_stock_dlg_icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Eula" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Eula.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-1251</value>
+  </data>
+  <data name="Licenses" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Licenses.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;windows-1251</value>
+  </data>
+  <data name="round_step_predefined" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\round-step-predefined.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="round_step_custom" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\round-step-custom.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="warning_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\warning-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="UpdateUrl" xml:space="preserve">
+    <value>https://www.codestack.net/labs/solidworks/stock-fit-geometry/version-info.json</value>
+  </data>
+  <data name="about_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\about-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
